--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,7 @@
 # History files
 .Rhistory
 .Rapp.history
+.RData
 
 # Example code in package build process
 *-Ex.R
@@ -11,3 +12,9 @@
 # produced vignettes
 vignettes/*.html
 vignettes/*.pdf
+.Rproj.user
+
+# Dataset files
+_MACOSX/
+*.json
+*.zip
